# estimators

map_server/: CMakeLists.txt  manifest.xml
map_server/src/: extract_tunnel_center_line.cc  generate_corridor.cc  generate_tunnel.cc
of_estimator/: CMakeLists.txt  manifest.xml
of_estimator/include/: of_estimator.hh
of_estimator/launch/: test_of_estimator.launch  test_of_estimator_rosbag.launch
of_estimator/msg/: OpticalFlowField.msg
of_estimator/src/: of_estimator.cc  of_estimator_node.cc
quadrotor_ukf_lite/: CMakeLists.txt  manifest.xml  package.xml
quadrotor_ukf_lite/config/: params.yaml
quadrotor_ukf_lite/include/: quadrotor_ukf.hh
quadrotor_ukf_lite/src/: quadrotor_ukf.cc  quadrotor_ukf_node.cc
roof_estimator/: CMakeLists.txt  manifest.xml
roof_estimator/include/: range_based_roof_localizer.hh  range_based_roof_mapper.hh  roof_localizer.hh  roof_mapper.hh  vision_based_roof_localizer.hh  vision_based_roof_mapper.hh
roof_estimator/launch/: roof_estimator_rosbag.launch  roof_localizer_rosbag.launch
roof_estimator/rviz/: roof_estimator.rviz
roof_estimator/src/: range_based_roof_localizer.cc  range_based_roof_mapper.cc  roof_estimator_node.cc  roof_localizer.cc  roof_mapper.cc  vision_based_roof_localizer.cc
tunnel_estimator/: CMakeLists.txt  package.xml
tunnel_estimator/config/: pc_to_surfaces_params.yaml  visualization_params.yaml
tunnel_estimator/include/tunnel_estimator/: pc_to_surfaces.hh  visual_1d_odom.hh
tunnel_estimator/launch/: present01.launch  present02.launch  present03.launch  test_icra2017_video.launch  test_pc_to_surfaces.launch  test_visual_odom.launch  visualize_odom.launch
tunnel_estimator/rviz/: test_icra2017_video.rviz
tunnel_estimator/src/: pc_to_surfaces.cc  visual_1d_odom.cc
tunnel_estimator/test/: test_icra2017_video.cc  test_pc_to_surfaces.cc  test_visual_odom.cc
tunnel_localizer/: CMakeLists.txt  TODO  manifest.xml
tunnel_localizer/include/: range_based_tunnel_localizer.hh  tunnel_localizer.hh  tunnel_localizer_node.hh  vision_based_tunnel_localizer.hh
tunnel_localizer/launch/: tunnel_localizer.launch  tunnel_localizer_record.launch  tunnel_localizer_rosbag.launch  tunnel_localizer_rviz.launch
tunnel_localizer/presentation/: extract_data.py  extract_data2.py  images_to_video.sh
tunnel_localizer/rviz/: tunnel_localizer01.rviz
tunnel_localizer/src/: range_based_tunnel_localizer.cc  tunnel_localizer.cc  tunnel_localizer_node.cc  vision_based_tunnel_localizer.cc
two_lidars_odom/: CMakeLists.txt  manifest.xml
two_lidars_odom/config/: laser_proc.yaml
two_lidars_odom/include/: two_lidars_odom.hh
two_lidars_odom/launch/: two_lidars_odom.launch  two_lidars_odom_record.launch  two_lidars_odom_rosbag.launch
two_lidars_odom/rviz/: two_lidars_odom01.rviz
two_lidars_odom/src/: two_lidars_odom.cc  two_lidars_odom_node.cc
velodyne_odom/: CMakeLists.txt  manifest.xml  package.xml
velodyne_odom/config/: velodyne_odom_params.yaml
velodyne_odom/include/: laser_utils.hh  trans_utils.hh  utils.hh  velodyne_odom.hh
velodyne_odom/launch/: velodyne_odom.launch  velodyne_odom_rosbag.launch  velodyne_odom_rviz.launch
velodyne_odom/rviz/: velodyne_odom.rviz
velodyne_odom/src/: trans_utils.cc  velodyne_odom.cc  velodyne_odom_node.cc
