<package>
  <version>0.3.0</version>
  <name>quadrotor_ukf_lite</name>
  <description>
     quadrotor_ukf_lite
  </description>
  <author>author</author>
  <license>BSD</license>
  <maintainer email="author@smo.edu">maintainer</maintainer>
  
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>mavros</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pose_utils</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>mavros</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pose_utils</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>




